--- a/ProcessWatcher/MainWindow.xaml
+++ b/ProcessWatcher/MainWindow.xaml
@@ -1,12 +1,12 @@
-﻿<Window x:Class="ProcessWatcher.MainWindow"
+﻿<mah:MetroWindow x:Class="ProcessWatcher.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ProcessWatcher"
-        xmlns:customControls="clr-namespace:ProcessWatcher.CustomControls;assembly=ProcessWatcher.CustomControls"
         xmlns:reactiveUi="http://reactiveui.net"
         xmlns:controls="clr-namespace:Notifications.Wpf.Controls;assembly=Notifications.Wpf"
+        xmlns:mah="http://metro.mahapps.com/winfx/xaml/controls"
         mc:Ignorable="d"
         d:DataContext="{d:DesignInstance Type=local:AppBootstrapper, IsDesignTimeCreatable=True}"
         Title="ProcessWatcher" Height="350" Width="525">
@@ -16,4 +16,4 @@
                                    Router="{Binding Router}" />
         <controls:NotificationArea x:Name="WindowArea" Position="BottomRight" MaxItems="1"/>
     </Grid>
-</Window>
+</mah:MetroWindow>
